--- a/favoritetoys.html
+++ b/favoritetoys.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="link"><img src="/goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
+        <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
         <nav class="nav">
             <a href="/" class="link">Home</a>
-            <a href="/pictures.html" class="link">Pictures</a>
-            <a href="/family.html" class="link">Family</a>
+            <a href="pictures.html" class="link">Pictures</a>
+            <a href="family.html" class="link">Family</a>
             <a class="link selected">Favorite Toys</a>
         </nav>
     </header>
