--- a/pictures.html
+++ b/pictures.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="link"><img src="/goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
+        <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
         <nav class="nav">
             <a href="/" class="link">Home</a>
             <a class="selected">Pictures</a>
-            <a href="/family.html" class="link">Family</a>
-            <a href="/favoritetoys.html" class="link">Favorite Toys</a>
+            <a href="family.html" class="link">Family</a>
+            <a href="favoritetoys.html" class="link">Favorite Toys</a>
         </nav>
     </header>
     <section class="gallery">
-       <img src="/img/IMG_0965.jpeg" alt="Baby picture of Chula" class="chula-pic">
-       <img src="/img/IMG_0722.jpeg" alt="Picture of Chula" class="chula-pic">
-       <img src="/img/IMG_1317.jpeg" alt="Picture of Chula" class="chula-pic">
-       <img src="/img/IMG_1857.jpeg" alt="Picture of Chula" class="chula-pic">
-       <img src="/img/IMG_2007.jpeg" alt="Picture of Chula" class="chula-pic">
-       <img src="/img/IMG_2668.jpeg" alt="Picture of Chula" class="chula-pic">
-       <img src="/img/IMG_3853.jpeg" alt="Picture of Chula" class="chula-pic">
-       <img src="/img/IMG_4594.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_0965.jpeg" alt="Baby picture of Chula" class="chula-pic">
+       <img src="img/IMG_0722.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_1317.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_1857.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_2007.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_2668.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_3853.jpeg" alt="Picture of Chula" class="chula-pic">
+       <img src="img/IMG_4594.jpeg" alt="Picture of Chula" class="chula-pic">
     </section>
 </body>
 </html>
