--- a/family.html
+++ b/family.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <header class="header">
-    <a href="/" class="link"><img src="/goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
+    <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
     <nav class="nav">
         <a href="/" class="link">Home</a>
-        <a href="/pictures.html" class="link">Pictures</a>
-        <a href="/family.html" class="selected link">Family</a>
-        <a href="/favoritetoys.html" class="link">Favorite Toys</a>
+        <a href="pictures.html" class="link">Pictures</a>
+        <a href="family.html" class="selected link">Family</a>
+        <a href="favoritetoys.html" class="link">Favorite Toys</a>
     </nav>
 </header>
 <section class="family">
