--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 <header class="header">
-    <a href="/" class="link"><img src="/goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
+    <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
     
     <nav class="nav">
         <a class="selected">Home</a>
-        <a href="/pictures.html" class="link">Pictures</a>
-        <a href="/family.html" class="link">Family</a>
-        <a href="/favoritetoys.html" class="link">Favorite Toys</a>
+        <a href="pictures.html" class="link">Pictures</a>
+        <a href="family.html" class="link">Family</a>
+        <a href="favoritetoys.html" class="link">Favorite Toys</a>
     </nav>
 </header>
 <main class="main">
     <div class="main-left">
-        <img src="/img/chula.jpg" alt="Picture of Chula" class="main-picture">
+        <img src="img/chula.jpg" alt="Picture of Chula" class="main-picture">
     </div>
     <div class="main-right">
         <h1 class="main-title"> 
             Hi, I'm Chula!
         </h1>
-        <a href="/pictures.html" class="button main-button">
+        <a href="pictures.html" class="button main-button">
             See More Pictures!
         </a>
     </div>
