--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Chula</title>
 </head>
 <body>
+    <!-- Index page -->
 <header class="header">
     <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
     
