Changed home link

--- a/pictures.html
+++ b/pictures.html
@@ -10,7 +10,7 @@
     <header class="header">
         <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
         <nav class="nav">
-            <a href="/" class="link">Home</a>
+            <a href="/index.html" class="link">Home</a>
             <a class="selected">Pictures</a>
             <a href="family.html" class="link">Family</a>
             <a href="favoritetoys.html" class="link">Favorite Toys</a>
