--- a/favoritetoys.html
+++ b/favoritetoys.html
@@ -11,7 +11,7 @@
     <header class="header">
         <a href="/" class="link"><img src="goodboy.jpg" class="logo" alt="Logo of Chula"> Chulas Website</a>
         <nav class="nav">
-            <a href="/" class="link">Home</a>
+            <a href="/index.html" class="link">Home</a>
             <a href="pictures.html" class="link">Pictures</a>
             <a href="family.html" class="link">Family</a>
             <a class="link selected">Favorite Toys</a>
